Reduce FasterSleep analysis findings